--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                     </a>
                     <a href="detail_8.html">
                         <div class="Portfolio-item-8 wow zoomIn">
-                            <img class="layer1" src="images/maya.jpg" alt="">
+                            <img class="layer1" src="images/swat1.png" alt="">
                             <div class="xam"></div>
                             <div class="gradient"></div>
                             <div class="hinhvuong"></div>
