--- a/detail_8.html
+++ b/detail_8.html
@@ -24,7 +24,7 @@
                         <div class="item-header">
                         </div>
                         <div class="item-content">
-                            <a href="images/la.jpg" rel="cungmotnhom"><img style="width: 100%; height: 100%;" src="images/la.jpg" alt=""></a>
+                            <a href="images/swat1.png" rel="cungmotnhom"><img style="width: 100%; height: 100%;" src="images/swat1.png" alt=""></a>
                             <div class="thanh-1-1"></div>
                             <div class="thanh-2-1"></div>
                         </div>
@@ -37,7 +37,7 @@
                         <div class="item-header">
                         </div>
                         <div class="item-content">
-                            <a href="images/la.jpg" rel="cungmotnhom"><img style="width: 100%; height: 100%;" src="images/la.jpg" alt=""></a>
+                            <a href="images/swat2.png" rel="cungmotnhom"><img style="width: 100%; height: 100%;" src="images/swat2.png" alt=""></a>
                             <div class="thanh-1-2"></div>
                             <div class="thanh-2-2"></div>
                         </div>
@@ -51,7 +51,7 @@
                         <div class="item-header">
                         </div>
                         <div class="item-content">
-                            <a href="images/la.jpg" rel="cungmotnhom"><img style="width: 100%; height: 100%;" src="images/la.jpg" alt=""></a>
+                            <a href="images/swat3.png" rel="cungmotnhom"><img style="width: 100%; height: 100%;" src="images/swat3.png" alt=""></a>
                             <div class="thanh-1-3"></div>
                             <div class="thanh-2-3"></div>
                         </div>
@@ -65,7 +65,7 @@
                         <div class="item-header">
                         </div>
                         <div class="item-content">
-                            <a href="images/la.jpg" rel="cungmotnhom"><img style="width: 100%; height: 100%;" src="images/la.jpg" alt=""></a>
+                            <a href="images/swat4.png" rel="cungmotnhom"><img style="width: 100%; height: 100%;" src="images/swat4.png" alt=""></a>
                             <div class="thanh-1-4"></div>
                             <div class="thanh-2-4"></div>
                         </div>
@@ -79,7 +79,7 @@
                         <div class="item-header">
                         </div>
                         <div class="item-content">
-                            <a href="images/la.jpg" rel="cungmotnhom"><img style="width: 100%; height: 100%;" src="images/la.jpg" alt=""></a>
+                            <a href="images/swat5.png" rel="cungmotnhom"><img style="width: 100%; height: 100%;" src="images/swat5.png" alt=""></a>
                             <div class="thanh-1-5"></div>
                             <div class="thanh-2-5"></div>
                         </div>
