--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                             <div class="xam"></div>
                             <div class="gradient"></div>
                             <div class="hinhvuong"></div>
-                            <div class="chuto">Mickey</div>
+                            <div class="chuto">Đặc nhiệm SWAT</div>
                             <div class="chunho">Bấm để xem chi tiết</div>
                         </div>
                     </a>
